--- a/dfa_App/templates/dfa_App/index.html
+++ b/dfa_App/templates/dfa_App/index.html
@@ -2,6 +2,7 @@
 {% block title %}Fahrzeugsuche{% endblock title %}
 
 {% block content %}
+Hallöchen
 {% endblock content %}
 {% block footer_javascript_page %}
 {% endblock footer_javascript_page %}
