Added CSV Sample

--- a/dfa_App/templates/dfa_App/master_data.html
+++ b/dfa_App/templates/dfa_App/master_data.html
@@ -95,14 +95,15 @@
                                 <p><i class="fas fa-info-circle"></i> Die Upload Methode gibt an, was mit bestehenden Datensätzen passieren
                                     wird, die
                                     nicht in Ihrer hochzuladenden Datei enthalten sind.<br>
-                                    <b>Sicher: </b>Bestehende Datensätze, die nicht in Ihrer Datei enthalten sind werden nicht gelöscht.<br>
-                                    <b>Unsicher: </b>Bestehende Datensätze, die nicht in Ihrer Datei enthalten sind werden gelöscht. Bitte
+                                    <b>Sicher: </b>Bestehende Datensätze, die nicht in Ihrer Datei enthalten sind, werden nicht gelöscht.<br>
+                                    <b>Unsicher: </b>Bestehende Datensätze, die nicht in Ihrer Datei enthalten sind, werden gelöscht. Bitte
                                     verwenden Sie die unsichere Methode, um Inkonsistenzen und Datenmüll zu vermeiden.</p>
                             </div>
                         </div>
                     </fieldset>
                     <input type="file" id="import_vehicle" name="import_file">
                     <input type="submit" class="btn btn-primary" value="Hochladen">
+                    <a href="/samples/vehicle/">Musterdatei</a>
                 </form>
                 {% endif %}
             </div>
