Sample opens in new Tab

--- a/dfa_App/templates/dfa_App/master_data.html
+++ b/dfa_App/templates/dfa_App/master_data.html
@@ -103,7 +103,7 @@
                     </fieldset>
                     <input type="file" id="import_vehicle" name="import_file">
                     <input type="submit" class="btn btn-primary" value="Hochladen">
-                    <a href="/samples/vehicle/">Musterdatei</a>
+                    <a href="/samples/vehicle/" target="_blank">Musterdatei</a>
                 </form>
                 {% endif %}
             </div>
