--- a/dfa_App/templates/dfa_App/index.html
+++ b/dfa_App/templates/dfa_App/index.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 Hallöchen
+<iframe src="http://37.120.161.115:7999/" width="900" height="400" name="Enif Test"></iframe>
 {% endblock content %}
 {% block footer_javascript_page %}
 {% endblock footer_javascript_page %}
