--- a/dfa_App/templates/dfa_App/index.html
+++ b/dfa_App/templates/dfa_App/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 Hallöchen
-<div class="chatbot_wrapper" style="border: 0px; background-color: transparent; pointer-events: none; z-index: 999; position: fixed; bottom: 0px; max-width: 350px; min-width: 60px; max-height: 500px; min-height: 60px; overflow: hidden; opacity: 1; right: 0px;">
+<div class="chatbot_wrapper" style="border: 0px; background-color: transparent; pointer-events: none; z-index: 999; position: fixed; bottom: 0px; width: 355px; height: 480px; overflow: hidden; opacity: 1; right: 0px;">
 <iframe src="http://37.120.161.115:7999/" style="width: 100%; height: 100%; border:none; background:none; float: none; pointer-events: all; position: absolute; inset: 0px; margin: 0px; padding: 0px; min-height: 0px;"name="Enif Test"></iframe>
 </div>
 {% endblock content %}
